# src/routes/specifications.routes.ts
@@ -1,11 +1,0 @@
-import { Router } from "express";
-
-import { createSpecificationController } from "../modules/cars/useCases/createSpecification";
-
-const specificationsRoutes = Router();
-
-specificationsRoutes.post("/", (request, response) => {
-  return createSpecificationController.handle(request, response);
-});
-
-export { specificationsRoutes };
