# src/shared/infra/http/routes/specifications.routes.ts
@@ -1,0 +1,18 @@
+import { Router } from "express";
+
+import { CreateSpecificationController } from "../../../../modules/cars/useCases/createSpecification/CreateSpecificationController";
+import { ensureAdmin } from "../middlewares/ensureAdimn";
+import { ensureAuthenticated } from "../middlewares/ensureAuthenticated";
+
+const specificationsRoutes = Router();
+
+const createSpecificationController = new CreateSpecificationController();
+
+specificationsRoutes.post(
+  "/",
+  ensureAuthenticated,
+  ensureAdmin,
+  createSpecificationController.handle
+);
+
+export { specificationsRoutes };
